--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.dnastack</groupId>
-  <artifactId>pgp</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>DOS-Server-PGP-Wrapper</name>
-  <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
-  <dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	
+	<groupId>com.dnastack</groupId>
+	<artifactId>pgp</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	
+	<name>DOS-Server-PGP-Wrapper</name>
+	<url>http://maven.apache.org</url>
+	
+	<properties>
+	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
+	<dependencies>
   
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>3.8.1</version>
+	  <scope>test</scope>
+	</dependency>
+	   
 	<dependency>
 	  <groupId>org.projectlombok</groupId>
 	  <artifactId>lombok</artifactId>
@@ -32,15 +32,15 @@
 	
 	<!-- Handling JSON Objects -->
 	<dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20180130</version>
+	     <groupId>org.json</groupId>
+	     <artifactId>json</artifactId>
+	     <version>20180130</version>
 	</dependency>
 	<dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-      <scope>compile</scope>
+	     <groupId>com.google.code.gson</groupId>
+	     <artifactId>gson</artifactId>
+	     <version>2.8.5</version>
+	     <scope>compile</scope>
 	</dependency>
 	
 	<!-- Making HTTP Requests -->
@@ -49,6 +49,16 @@
 	  <artifactId>httpclient</artifactId>
 	  <version>4.5.6</version>
 	</dependency>
-
-  </dependencies>
+	
+	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+  
 </project>
